src/App.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');



@media screen and (min-width: 1200px) {
  *{
    box-sizing: border-box;
    margin: 0;
    padding: 0;
  }

  body{
    color: #000;
    font-family: "Poppins", sans-serif;
  }
  
  .navbar {
    z-index: 9999; 
    position: fixed;
    top: 0; 
    left: 0;
    width: 100%; 
    display: flex;
    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.19);
    height: 5em;
    background-color: white;
    transition: background-color 0.3s; 
  }
  
  .navbar .logo{
    position: fixed;
    left: 15em;
    top: 1.5em;
    height: 2em;
    background-color: red;
    cursor: pointer;
  }
  
  .navbar .logo-content{
    padding: 0.5em;
    font-size: 20px;
    font-weight: bold;
  }
  
  .navbar ul{
    position: fixed;
    left: 33%;
    top: 1.5em;
    height: 2em;
    background-color: green;
    cursor: pointer;
  }
  
  .navbar ul li{
    position: relative;
    display: inline;
    width: 100%;
    list-style-type: none;
    margin: 1em;
    font-size: 19px;

  }
  .navbar a, .navbar ul li a{
    text-decoration: none;
    color: #000;
    padding: 1em;
    border-width: 0%;
    transition: border-width 2s;
    border-bottom: none;
    font-weight: bold;
  }

  .navbar ul li a:after{
    background-color: rgb(130, 130, 130);
    content: '';
    position: absolute;
    height: 4px;
    width: 0;
    left: 0;
    bottom: -15px;
    transition: 0.3s;
  }
  .navbar ul li a:hover{
    color: rgb(130, 130, 130);
  }
  .navbar ul li a:hover:after{
    width: 100%;
  }
  
  .menu-icon{
    display: none;
  }
  
  button{
    border: none;
    background-color: transparent;
    color: #000;
  }
  

  .home-container .home-card{
    margin: 7vh auto 0 auto;
    height: 85vh;
  }
  .home-content{
    text-align: center;
    width: 100%;
    align-items: center;
  }
  .cards-container{
    display: flex;
    width: 60%;
    height: 70vh;
    margin: auto;
    border-radius: 10px;
    margin-top: -15vh;
  }
  .card-1{
    width: 26.7%;
    margin: auto;
    position: relative;
    right: 6em;
  }
  .card-2{

    width: 26.7%;
    position: relative;
    margin: auto;
    left: 2em;
  }

  .card-2 h3{
    /* color: rgb(83, 83, 83); */
  }
  .dev_me_img {
    width: 25em;
    position: relative;
    margin: auto;
  }
  .icons-container{
    width: 26.7%;
    height: auto;
    position: relative;
    margin: auto;
  }
  .icons-container ul {
    position: relative;
    padding: 2em 0;
  }
  
  .icons-container ul li {
    list-style-type: none;
    display: block;
    margin-top: 2em;
    margin-bottom: 2em;
    font-size: 14px;
  }
  
  .icons-container ul li a {
    display: inline-block;
    color: #000;
    text-decoration: none;
    transition: transform 0.3s, font-size 0.3s, background-color 0.3s;
  }
  
  .icons-container ul li a:hover {
    transform: scale(1.2); 
  }
  .icons-container ul li a:focus {
    outline: none;
    box-shadow: none;
}

  .home-container .home-card .home-content{
    position: relative;
    top: 20vh;
    text-align: center;
    line-height: 2.5em;
    /* margin-top: 10vh; */
  }

  .twin-btn{
    display: flex;
    margin: auto;
  }
  
  .twin-btn button{
    position: relative;
    border-radius: 25px;
    padding: 1em;
    border: 1px solid #000;
    top: 2em;
    outline: none;
    font-size: 12px;
  }
  
  .twin-btn button:hover{
    background-color: #000;
    color: #fff;
  }
  
  .btn-C{
    margin-left: 1em;
    width: 100%;
  }

  .btn-D{
    margin-right: 1em;
    width: 100%;
  }
  
  .about-me-container{
    height: 90vh;
    margin-top: 9vh;
  }
  .about-me-title{
    text-align: center;
    position: relative;
    top: 10%;
  }

  .experience-education-container{
    display: flex;
    position: relative;
    text-align: center;
    justify-content: center;
    margin: auto;
    top: 15vh;
  }

  .experience-card, .education-card{
    border: 2px solid #000;
    border-radius: 15px;
    width: 25%;
    height: 25vh;
    position: relative;
    display: block;
    font-size: 16px;
  }
  .experience-card{
    position: relative;
    right: 50px;
  }
  .education-card{
    position: relative;
    left: 50px;  
  }
  .about-icons{
    margin-top: 10%;
  }
  .my-description{
    width: 57%;
    margin: auto;
    position: relative;
    top: 19vh;
    word-spacing: 5px;
    font-size: 16px;
  }

  .experience-container{
    width: 80%;
    height: 90vh;
    text-align: center;
    margin: 0 auto -15vh auto;
  }
  .experience-title{
    position: relative;
    top: 15%;
  }
  .experience-title h4, h4{
    color: rgb(83, 83, 83);;
  }
  .experience-title h2, h2{
    font-size: 30px;
  }
  .experience-card-container{
    width: 80%;
    display: flex;
    margin: auto;
    position: relative;
    top: 20%;
  }
  .experience-card h2, .education-card h2{
    font-size: 22px;
  }
  .card-frontend-dev, .card-backend-dev{
    text-align: center;
    width: 48%;
    height: 52vh;
    border: .5px solid #000;
    border-radius: 15px;
    margin: auto;
  }
  .role-title{
    color: rgb(83, 83, 83);
    font-size: 22px;
    font-weight: bold;
    margin-top: 5vh;
  }
  .experince-languages{
    display: flex;
  }
  .row-1{
    text-align: start;

  }
  .icon-experience{
    display: flex;
    padding: 1em;
  }

  .icon-experience p{
    margin-top: -.25em;
    margin-left: 1em;
    font-size: 16px;
    font-weight: bold;
    color: #000;
  }
  .experience-level{
    margin-left: 3.5em;
    color: rgb(83, 83, 83);
    position: relative;
    top: -2vh;
    font-size: 15px;
  }
  .row-2{
    text-align: start;
  }
  .row-1, .row-2{
    margin: auto;
  }
}

